<resources>
    <string name="app_name">Unter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_new_user_ui">CreateNewUserUIActivity</string>
    <string name="title_activity_edit_profile_ui">EditProfileUIActivity</string>
    <string name="title_activity_main_screen_ui">MainScreenUIActivity</string>
    <string name="title_activity_my_ride_offers_ui">MyRideOffersUIActivity</string>
    <string name="title_activity_my_ride_requests_ui">MyRideRequestsUIActivity</string>
    <string name="title_activity_provide_aride_ui">ProvideARideUIActivity</string>
    <string name="title_activity_request_aride_ui">RequestARideUIActivity</string>
    <string name="title_activity_request_details_ui">RequestDetailsUIActivity</string>
    <string name="title_activity_ride_offer_details_ui">RideOfferDetailsUIActivity</string>
    <string name="title_activity_riders_request_details_post_ui">RidersRequestDetailsPostUIActivity</string>
    <string name="title_activity_riders_request_details_pre_ui">RidersRequestDetailsPreUIActivity</string>
    <string name="title_activity_notifications">Notifications</string>

    <!--activity_main_gui.xml strings-->
    <string name="create_new_user">Create\nNew User</string>
    <string name="login">Login</string>
    <string name="username_title_login">Username</string>
    <string name="password_title_login">Password</string>
    <string name="enter_password_login_hint">Enter Password</string>
    <string name="enter_username_login_hint">Enter Username</string>

    <string name="welcome">Welcome</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="request_a_ride">Request\nA Ride</string>
    <string name="my_ride_requests">My Ride\nRequests</string>
    <string name="provide_a_ride">Provide\nA Ride</string>
    <string name="my_ride_offers">My Ride\nOffers</string>

    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="vehicle">Vehicle</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_test">testActivity</string>

    <string name="action_settings">Settings</string>
    <string name="choose_driver">Choose this Driver</string>
    <string name="view_profile">View Profile</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_provide_aride_test_ui">ProvideARideTestUIActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


</resources>
