<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.cmput301f16t09.unter.MainGUIActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="110sp"
        android:textColor="@color/TextColor"
        android:fontFamily="sans-serif-smallcaps" />
    
    <TextView
        android:id="@+id/username_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:text="@string/username_title_login"
        android:textSize="40sp"
        android:textColor="@color/TextColor"
        android:fontFamily="sans-serif-smallcaps" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/password_title_login"
        android:textSize="40sp"
        android:textColor="@color/TextColor"
        android:fontFamily="sans-serif-smallcaps" />

    <EditText
        android:id="@+id/mainScreenUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_title"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/enter_username_login_hint"
        android:textSize="20sp"
        android:textColorHint="@color/HintTextColor"
        />

    <EditText
        android:id="@+id/mainScreenPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_title"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password_login_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/HintTextColor"
        android:gravity="center"
        android:fontFamily="sans-serif-smallcaps" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/mainscreen_button_width"
        android:layout_height="@dimen/mainscreen_button_height"
        android:layout_below="@+id/mainScreenPassword"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/white"
        android:text="@string/login"
        android:textSize="20sp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="verifyLoginCredentials" />

    <Button
        android:id="@+id/createNewUserButton"
        android:layout_width="@dimen/mainscreen_button_width"
        android:layout_height="@dimen/mainscreen_button_height"
        android:layout_alignTop="@+id/loginButton"
        android:layout_marginStart="200dp"
        android:layout_below="@+id/mainScreenPassword"
        android:background="@color/white"
        android:text="@string/create_new_user"
        android:textSize="18sp"
        android:fontFamily="sans-serif-smallcaps"
        android:onClick="createNewUser"/>

</RelativeLayout>
