<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.cmput301f16t09.unter.EditProfileUIActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_your_profile"
        android:id="@+id/textEditYourProfile"
        android:textSize="45sp"

        android:textColor="@color/TextColor"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textName"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/TextColor"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textEditYourProfile"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textSize="@dimen/input_text_size"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/textName"
        android:layout_alignStart="@+id/textName"
        android:textColor="@color/TextColor"
        android:hint="Current Name"
        android:textColorHint="@color/HintTextColor"
        android:id="@+id/editName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:id="@+id/textPhoneNumber"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/TextColor"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textName"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/textName"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textSize="@dimen/input_text_size"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/textPhoneNumber"
        android:layout_alignStart="@+id/textName"
        android:textColor="@color/TextColor"
        android:hint="Current Phone Number"
        android:textColorHint="@color/HintTextColor"
        android:id="@+id/editPhoneNumber" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textEmail"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/TextColor"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textPhoneNumber"
        android:layout_alignStart="@+id/textName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textSize="@dimen/input_text_size"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/textEmail"
        android:layout_alignStart="@+id/textName"
        android:textColor="@color/TextColor"
        android:hint="Current Email"
        android:textColorHint="@color/HintTextColor"/>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/TextColor"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textEmail"
        android:layout_alignStart="@+id/textName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textSize="@dimen/input_text_size"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/textPassword"
        android:layout_alignStart="@+id/textName"
        android:textColor="@color/TextColor"
        android:hint="Current Password"
        android:textColorHint="@color/HintTextColor"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="@dimen/header_text_size"
        android:textColor="@color/TextColor"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textPassword"
        android:layout_alignStart="@+id/textName"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textSize="@dimen/input_text_size"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/textConfirmPassword"
        android:layout_alignStart="@+id/textEmail"
        android:textColor="@color/TextColor"
        android:textColorHint="@color/HintTextColor"
        android:inputType="textPassword"
        android:hint="Confirm password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="C o n f i r m"

        android:textSize="36sp"
        android:background="@color/lightAccent"
        android:id="@+id/EditProfileConfirmButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:textSize="14sp"
        android:textColor="@color/TextColor"
        android:hint="Current Email"
        android:textColorHint="@color/HintTextColor"
        android:layout_below="@+id/textEmail"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
