<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.cmput301f16t09.unter.ViewProfileUIActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1.0">

        <TextView
            android:id="@+id/textUsernameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="0.2"
            android:text="Username"
            android:textSize="42sp"
            android:textColor="@color/TextColor"
            android:fontFamily="sans-serif-smallcaps"/>

        <TextView
            android:id="@+id/textViewProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/TextColor"
            android:fontFamily="sans-serif-smallcaps" />

        <TextView
            android:id="@+id/displayNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/TextColor"
            android:fontFamily="sans-serif-smallcaps" />

        <TextView
            android:id="@+id/textViewProfilePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/TextColor"
            android:fontFamily="sans-serif-smallcaps" />

        <TextView
            android:id="@+id/displayNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:phoneNumber="true"
            android:inputType="phone"
            android:autoLink="phone"
            android:textColorHighlight="@color/lightAccent"
            android:textColorLink="@color/lightAccent" />

        <TextView
            android:id="@+id/textViewProfileEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/TextColor"
            android:fontFamily="sans-serif-smallcaps"/>

        <TextView
            android:id="@+id/displayEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/white"
            android:textColorHighlight="@color/lightAccent"
            android:textColorLink="@color/lightAccent"
            android:fontFamily="sans-serif-smallcaps"
            android:inputType="textEmailAddress"
            android:autoLink="email"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewProfileVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/vehicle"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/TextColor"
            android:fontFamily="sans-serif-smallcaps"/>

        <TextView
            android:id="@+id/displayVehicleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/input_text_size"
            android:textColor="@color/TextColor"
            android:fontFamily="sans-serif-smallcaps" />

    </LinearLayout>


</RelativeLayout>
